--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet" />
     <link rel="icon" type="image/png" sizes="16x16" href="https://icons.iconarchive.com/icons/pelfusion/long-shadow-media/256/Maps-Pin-Place-icon.png">
   </head>
+
+  <style>
+    body{
+      overflow: hidden;
+    }
+  </style>
   
   <body>
     <div id="root"></div>
